--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
         <meta name="description" content="Map of total and per capita COVID-19 cases in New York City.">
         <meta property="og:title" content="NYC COVID-19 map">
         <meta property="og:description" content="Map of total and per capita COVID-19 cases in New York City.">
-        <meta property="og:image" content="https://nyc-covid19-mpa.web.app/thumbnail.png">
-        <meta property="og:url" content="https://nyc-covid19-mpa.web.app">
         <meta name="twitter:title" content="NYC COVID-19 map">
         <meta name="twitter:description" content="Map of total and per capita COVID-19 cases in New York City.">
-        <meta name="twitter:image" content="https://nyc-covid19-mpa.web.app/thumbnail.png">
         <meta name="twitter:card" content="summary_large_image"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <link rel="icon" href="favicon.ico">
@@ -17,13 +14,16 @@
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
         crossorigin=""/>
         <link rel="stylesheet" href="./style.css"/>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-P30C9V7R66"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-P30C9V7R66');
-        </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-57179511-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-57179511-1');
+</script>
+
     </head>
     <body>
 	<div class="controls">
@@ -36,9 +36,8 @@
         </div>
         <div id="map"></div>
         <div id="info">
-            <a href="https://github.com/nychealth/coronavirus-data" target="_blank">Data Source</a> |
-            <a href="https://github.com/khempenius/nyc-covid19-map" target="_blank">Repo</a> |
-            By <a href="https://twitter.com/katiehempenius" target="_blank">Katie Hempenius</a>
+            <a href="https://github.com/nychealth/coronavirus-data" target="_blank">Data Source: NYC Health</a> |
+            <a href="http://futureproof.nyc/futureproof/">Future Proof</a> |
         </div>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
